fixed the alignment

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -89,7 +89,8 @@
 /* Hero section */
 
 .logo{
-  width: 20%;
+  width: 100%;
+  height: auto;
 }
 
 a {
